--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "intervention/image": "*",
+        "jenssegers/optimus": "^1.1",
         "laravel/framework": "^11.9",
         "laravel/jetstream": "^5.3",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.0",
+        "maatwebsite/excel": "^3.1",
         "ramsey/uuid": "^4.7",
-        "spatie/laravel-permission": "^6.10"
+        "rap2hpoutre/laravel-log-viewer": "^2.4",
+        "spatie/laravel-permission": "^6.10",
+        "spatie/laravel-sluggable": "^3.6",
+        "stevebauman/location": "^7.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
